# gdev_test

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
bot/: __main__.py  app.py  config.py  run.py  setup_bot.py
bot/ai/: __init__.py  client.py
bot/common/: logging.py
bot/handlers/: __init__.py  chat.py  start.py
bot/services/: chat.py
bot/telegram/: files.py
telegram-bot-architecture-course/: _base.html  index.html
telegram-bot-architecture-course/modules/: 01-path-of-a-message.html  02-main-actors.html  03-three-message-modes.html  04-boundaries-and-integrations.html  05-reliability-and-debugging.html
tests/: test_ai_client.py  test_bootstrap.py  test_chat_service.py  test_client_factory.py  test_config.py  test_handlers.py  test_settings_and_files.py
